# eshop2

./: .gitignore  .importlinter  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yaml  hello_world_consumer.py  justfile  messaging.py  publisher.py  pyproject.toml  pytest.ini  utils.py  wearables_consumer.py
.codex/: config.toml
src/grpc_protos/: justfile  pyproject.toml
src/grpc_protos/grpc_protos/v1/hello_world/: hello_world.proto  hello_world_pb2.py  hello_world_pb2.pyi  hello_world_pb2_grpc.py
src/libs/: pyproject.toml
src/libs/libs/: utils.py
src/libs/libs/alembic_ext/: env_helpers.py  timescale_ops.py
src/libs/libs/common/: enums.py
src/libs/libs/common/schemas/: dto.py
src/libs/libs/fastapi_ext/middlewares/: __init__.py  request_body_limit.py  request_id.py  request_response_logging.py  security_headers.py  unhandled_exception.py
src/libs/libs/fastapi_ext/schemas/: base_schemas.py
src/libs/libs/faststream_ext/: __init__.py  consts.py  decorators.py  exceptions.py  middlewares.py  models.py  repositories.py  settings.py  utils.py
src/libs/libs/faststream_ext/rabbitmq_ext/: decorators.py
src/libs/libs/faststream_ext/schemas/: __init__.py  dtos.py
src/libs/libs/grpc_ext/interceptors/: request_id.py
src/libs/libs/logging/: __init__.py  config.py  enums.py  formatters.py  settings.py
src/libs/libs/prometheus_ext/: __init__.py  utils.py
src/libs/libs/rabbitmq_ext/: utils.py
src/libs/libs/redis_ext/: utils.py
src/libs/libs/sentry_ext/: __init__.py  settings.py  utils.py
src/libs/libs/settings/: __init__.py  base_settings.py  utils.py
src/libs/libs/sqlmodel_ext/: __init__.py  base_model.py  session.py  settings.py  utils.py
src/libs/libs/taskiq_ext/: __init__.py  decorators.py  exceptions.py  health_server.py  liveness_check.py  middlewares.py  models.py  repositories.py  settings.py
src/libs/libs/taskiq_ext/schemas/: task_messages.py
src/libs/libs/tests_ext/: sqlmodel_fixtures.py
src/libs/tests/: test_liveness_check.py  test_request_body_limit_middleware.py  test_request_id_middleware.py  test_security_headers_middleware.py  test_sentry_settings_mixin.py  test_settings_utils.py  test_setup_sentry.py  test_unhandled_exception_middleware.py  test_utc_now.py
src/libs/tests/faststream_ext/: test_decorators.py
src/libs/tests/faststream_ext/rabbitmq_ext/: test_decorators.py
src/libs/tests/faststream_ext/test_middlewares/: test_request_id.py  test_time_limit.py
src/libs/tests/grpc_ext/test_interceptors/: test_request_id.py
src/libs/tests/taskiq_ext/: test_decorators.py  test_health_server.py  test_middlewares.py
src/libs/tests/taskiq_ext/test_middlewares/: test_request_id.py  test_smart_retry_with_blacklist.py  test_task_lifecycle_log.py  test_time_limit.py  utils.py
src/libs/tests/taskiq_ext/test_schemas/: test_task_messages.py
src/libs/tests/tests_utils/: test_generate_deterministic_uuid.py
src/messaging_contracts/: pyproject.toml
src/messaging_contracts/messaging_contracts/: __init__.py  consts.py  events.py  utils.py
src/messaging_contracts/messaging_contracts/common/: __init__.py  base_messages.py
src/messaging_contracts/messaging_contracts/hello_world/: async_commands.py
src/rabbitmq_topology/: Dockerfile  pyproject.toml
src/rabbitmq_topology/rabbitmq_topology/: apply.py  consts.py  entities.py  resources.py  services.py  utils.py
src/rabbitmq_topology/rabbitmq_topology/schemas/: __init__.py  dtos.py
src/rabbitmq_topology/tests/: test_apply.py  test_services.py
src/services/api_gateway/: Dockerfile  Dockerfile.ci  justfile  pyproject.toml
src/services/api_gateway/api_gateway/: main.py  routes.py  settings.py
src/services/api_gateway/api_gateway/http/: main.py  routes.py
src/services/api_gateway/api_gateway/http/schemas/: request_schemas.py
src/services/api_gateway/api_gateway/http/v1/: __init__.py  routes.py
src/services/api_gateway/api_gateway/messaging/: main.py
src/services/api_gateway/tests/: conftest.py  test_main.py  test_routes.py
src/services/api_gateway/tests/http/: test_main.py  test_routes.py
src/services/api_gateway/tests/http/v1/: test_routes.py
src/services/hello_world/: .dockerignore  Dockerfile  Dockerfile.ci  justfile  pyproject.toml  pytest.ini
src/services/hello_world/hello_world/: main.py  settings.py  utils.py
src/services/hello_world/hello_world/grpc/: main.py
src/services/hello_world/hello_world/grpc/v1/: procedures.py
src/services/hello_world/hello_world/http/: main.py  routes.py
src/services/hello_world/hello_world/http/v1/: __init__.py  routes.py
src/services/hello_world/hello_world/messaging/: handlers.py  main.py
src/services/hello_world/hello_world/messaging/v1/: __init__.py  handlers.py
src/services/hello_world/migrations/: env.py  script.py.mako
src/services/hello_world/tests/: conftest.py
src/services/hello_world/tests/grpc/: conftest.py
src/services/hello_world/tests/http/: conftest.py  test_routes.py
src/services/hello_world/tests/messaging/: test_handlers.py
src/services/hello_world_service/: Dockerfile  Dockerfile.ci  pyproject.toml
src/services/hello_world_service/hello_world_service/: main.py
src/services/wearables/: .dockerignore  Dockerfile  Dockerfile.ci  alembic.ini  justfile  pyproject.toml  pytest.ini
src/services/wearables/migrations/: env.py
src/services/wearables/migrations/versions/: 20260211212335_add_wearable_event_table.py
src/services/wearables/tests/: conftest.py  test_routes.py
src/services/wearables/tests/background_tasks/: test_tasks.py
src/services/wearables/tests/http/: conftest.py  test_routes.py
src/services/wearables/tests/messaging/: test_handlers.py
src/services/wearables/wearables/: main.py  models.py  repositories.py  routes.py  settings.py  utils.py
src/services/wearables/wearables/background_tasks/: main.py  tasks.py
src/services/wearables/wearables/http/: main.py  routes.py
src/services/wearables/wearables/messaging/: handlers.py  main.py
src/services/wearables/wearables/schemas/: dtos.py  request_schemas.py  task_messages.py
(+214 files in other folders)
