[tool.poetry]
name = "myeshop"
version = "0.1.0"
description = ""
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
hello-world = { path = "src/services/hello_world", develop = true }
api-gateway = { path = "src/services/api_gateway", develop = true }
wearables = { path = "src/services/wearables", develop = true }
myeshop-libs = { path = "src/libs", develop = true }
pre-commit = "^4.5.1"

[tool.poetry.group.dev.dependencies]
ipython = "^9.10.0"
google-cloud-storage = "^3.9.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--import-mode=importlib -p libs.tests_ext.sqlmodel_fixtures"
testpaths = [
    "src/libs/tests",
    "src/services/hello_world/tests",
    "src/services/api_gateway/tests",
    "src/services/wearables/tests",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "*.po",
    "*.mo",
    "*.pot",
]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W"]
ignore = ["E722", "B904", "B006", "B008"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["E501"]
"**/__init__.py" = ["F401"]
