[tool.poetry]
name = "myeshop-libs"
version = "0.3.0"
description = "Shared library for MyEshop microservices"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "libs" }]

[tool.poetry.dependencies]
python = "^3.14"
pydantic = "^2.11.0"
pytest = "^9.0.2"
ruff = "^0.14.14"
pydantic-settings = "^2.12.0"
pyyaml = "^6.0.3"
starlette = "^0.52.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
