[tool.poetry]
name = "myeshop-libs"
version = "0.18.0"
description = "Shared library for MyEshop microservices"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "libs" }]

[tool.poetry.dependencies]
python = "^3.14"
pydantic = "^2.11.0"
pytest = "^9.0.2"
ruff = "^0.14.14"
pydantic-settings = "^2.12.0"
pyyaml = "^6.0.3"
starlette = "^0.52.1"
sqlmodel = "^0.0.31"
alembic = "^1.18.1"
asyncpg = "^0.31.0"
greenlet = "^3.3.1"
sentry-sdk = "^2.35"
taskiq = "^0.12.1"
redis = "^7.1.1"
prometheus-client = "^0.24.1"
prometheus-fastapi-instrumentator = "^7.1.0"
faststream = {extras = ["redis", "cli", "prometheus"], version = "^0.6.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
