[tool.poetry]
name = "api-gateway"
version = "0.7.0"
description = "API Gateway FastAPI microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "api_gateway" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
httpx = "^0.28.0"
myeshop-libs = "^0.7.0"
pytest = "^9.0.2"
ruff = "^0.14.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
