[tool.poetry]
name = "api-gateway"
version = "0.27.1"
description = "API Gateway FastAPI microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "api_gateway" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
grpcio = "^1.78.0"
faststream = {extras = ["rabbit"], version = "^0.6.6"}
myeshop-libs = "^0.33.0"
myeshop-messaging-contracts = "^0.12.0"
myeshop-rabbitmq-topology = "^0.12.0"
myeshop-grpc-protos = "^0.1.0"
pytest = "^9.0.2"
ruff = "^0.14.14"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
