[tool.poetry]
name = "hello-world"
version = "0.9.0"
description = "Simple Hello World FastAPI microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "hello_world" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
faststream = {extras = ["redis", "cli"], version = "^0.6.6"}
myeshop-libs = "^0.16.0"
myeshop-messaging-contracts = "^0.1.0"
pytest = "^9.0.2"
ruff = "^0.14.14"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--import-mode=importlib"
env = [
    "ENVIRONMENT=cicd",
    "FASTSTREAM_REDIS_URL=redis://localhost:16379",
    "POSTGRES_DIRECT_DB_URL=postgresql+asyncpg://postgres:postgres@localhost:15432/hello_world",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
