[tool.poetry]
name = "hello-world"
version = "0.24.0"
description = "Simple Hello World FastAPI microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "hello_world" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
faststream = {extras = ["rabbit", "cli"], version = "^0.6.6"}
myeshop-libs = "^0.30.0"
myeshop-messaging-contracts = "^0.11.0"
myeshop-rabbitmq-topology = "^0.11.0"
pytest = "^9.0.2"
ruff = "^0.14.14"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--import-mode=importlib -p libs.tests_ext.sqlmodel_fixtures"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
