[tool.poetry]
name = "hello-world"
version = "0.26.0"
description = "Simple Hello World microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "hello_world" }]

[tool.poetry.dependencies]
python = "^3.14"
grpcio = "^1.78.0"
grpcio-health-checking = "^1.78.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
faststream = {extras = ["rabbit", "cli"], version = "^0.6.6"}
myeshop-libs = "^0.32.0"
myeshop-messaging-contracts = "^0.12.0"
myeshop-rabbitmq-topology = "^0.12.0"
myeshop-grpc-protos = "^0.1.0"
pytest = "^9.0.2"
ruff = "^0.14.14"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--import-mode=importlib -p libs.tests_ext.sqlmodel_fixtures"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
