[tool.poetry]
name = "hello-world-service"
version = "0.1.0"
description = "Simple Hello World FastAPI microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "hello_world_service" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
