[tool.poetry]
name = "wearables"
version = "0.11.3"
description = "Wearables webhook ingestion microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "wearables" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.11.0"
myeshop-libs = "^0.12.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.14.14"
httpx = "^0.28.0"
taskiq = "^0.12.1"
taskiq-redis = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
