[tool.poetry]
name = "wearables"
version = "0.28.2"
description = "Wearables webhook ingestion microservice"
authors = ["Aleksei Sosov <forgithublesh@yandex.ru>"]
packages = [{ include = "wearables" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.11.0"
myeshop-libs = "^0.29.0"
myeshop-messaging-contracts = "^0.10.0"
myeshop-rabbitmq-topology = "^0.10.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.14.14"
httpx = "^0.28.0"
taskiq = "^0.12.1"
faststream = {extras = ["rabbit"], version = "^0.6.6"}
taskiq-aio-pika = "^0.5.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
addopts = "--import-mode=importlib -p libs.tests_ext.sqlmodel_fixtures"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
